# tide_plus

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
examples/: coco_instance_segmentation.ipynb  summary.json  summary_confusion_matrices.json
tidecv/: __init__.py  ap.py  data.py  datasets.py  functions.py  plotter.py  plotting.py  quantify.py  tide.py
tidecv/errors/: qualifiers.py
