[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tide-plus"
version = "1.2"
description = "An extended version of TIDE with normalized confusion matrices and enhanced reporting"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Goerkem Batagen", email = "g@batagan.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
]
dependencies = [
    "appdirs",
    "numpy",
    "pycocotools",
    "opencv-python",
    "seaborn",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "psutil"
]

[project.urls]
Homepage = "https://github.com/kyzira/tide-plus"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tidecv", "tidecv.errors"]
